# clock_cpp

./: .gitignore  .qmlls.ini  CMakeLists.txt  Dp.qml  MMenu.qml  Main.qml  README.md  calendar.mjs  clock-xwayland.desktop  main.cpp  qtquickcontrols2.conf  resources.qrc  singleapplication.cpp  singleapplication.h  windowmanager.cpp  windowmanager.h
docs/: PACKAGING_QUICKSTART.md  WAYLAND_SOLUTION.md
scripts/: install_desktop.sh  run_with_xwayland.sh
